...
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true"
            />
    </fragment>
    <fragment
        android:id="@+id/cardDetailFragment"
        android:name="com.tnh.mollert.cardDetail.CardDetailFragment"
        android:label="CardDetailFragment" >
        <argument
            android:name="workspaceId"
            app:argType="string" />
        <argument
...
